# baby-quill

./: .gitignore  README.md  pyproject.toml
examples/BabyQuill/: main.py  quill.toml
quill/: cli.py
quill/bot/: __init__.py  base.py
quill/core/: config.py  pretty.py  quill.py  types.py  utils.py
quill/llm/: __init__.py  base.py
quill/project/: __init__.py  base.py
quill/server/: __init__.py  base.py
